# capstone

./: .gitignore  Cargo.toml  fuzz.sh  thruster-fuzz.sh
fuzz-requests/: get-edit  get-index  get-new  post-complete  post-edit  post-new
load-test/: Cargo.toml
load-test/src/: main.rs
thruster-fuzz-requests/: get-edit  get-index  get-new  post-complete  post-edit  post-new
todo-actix/: Cargo.toml
todo-actix/src/: main.rs
todo-actix/static/: site.css
todo-actix/templates/: detail.html.j2  index.html.j2
todo-list/: Cargo.toml
todo-list/src/: lib.rs
todo-thruster/: Cargo.toml  test.sh
todo-thruster/src/: context.rs  main.rs
todo-thruster/static/: site.js
todo-thruster/templates/: detail.html.j2  index.html.j2
