[package]
name = "todo-actix"
version = "0.1.0"
authors = ["William Leuschner <wel2138@rit.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
chrono = { version = "0.4", features = ["serde"] }
todo-list = { path = "../todo-list" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
