[package]
name = "todo-actix"
version = "0.1.0"
authors = ["William Leuschner <wel2138@rit.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
actix-files = "0.5"
chrono = { version = "0.4", features = ["serde"] }
todo-list = { path = "../todo-list" }
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "0.8", features = ["v4", "serde"] }
serde_json = "1.0"
tera = "1"
log = "0.4"
env_logger = "0.9"
