[package]
name = "todo-list"
version = "0.1.0"
authors = ["William Leuschner <wel2138@rit.edu>"]
edition = "2018"

[lib]
name = "todo_list"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "0.8", features = ["v4", "serde"] }