[package]
name = "todo-thruster"
version = "0.1.0"
authors = ["William Leuschner <wel2138@rit.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thruster = { version = "1", features = ["hyper_server", "file"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.1"
chrono = { version = "0.4", features = ["serde"] }
todo-list = { path = "../todo-list" }
tera = "1"
hyper = "0.14.10"
uuid = { version = "0.8", features = ["v4", "serde"] }
log = "0.4"
env_logger = "0.9"